--- a/res/layout/drinks_main.xml
+++ b/res/layout/drinks_main.xml
@@ -63,7 +63,7 @@
                 android:id="@+id/TextView36"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Create custom drink..."
+                android:text="Cocktail builder..."
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold" />
 
@@ -90,8 +90,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:text="15 points to a free drink!"
+                    android:text="See which of Bartsy&apos;s 20,000 cocktails the bar can make for you"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
+
             </LinearLayout>
         </LinearLayout>
 
@@ -142,7 +143,7 @@
                 android:id="@+id/TextView28"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Bar specials..."
+                android:text="Bar menu"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold" />
 
@@ -156,11 +157,12 @@
                     android:padding="1dp" >
 
                     <ImageView
-                        android:id="@+id/ImageView20"
+                        android:id="@+id/ImageView03"
                         android:layout_width="17dp"
                         android:layout_height="17dp"
                         android:scaleType="fitCenter"
-                        android:src="@drawable/happyhour" />
+                        android:src="@drawable/specials" />
+
                 </FrameLayout>
 
                 <TextView
@@ -169,7 +171,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:text="Happy hour specials!"
+                    android:text="Wine, beer, specialties"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </LinearLayout>
 
@@ -178,16 +180,9 @@
                 android:layout_height="wrap_content" >
 
                 <FrameLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="17dp"
+                    android:layout_height="17dp"
                     android:padding="1dp" >
-
-                    <ImageView
-                        android:id="@+id/ImageView15"
-                        android:layout_width="17dp"
-                        android:layout_height="17dp"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/specials" />
                 </FrameLayout>
 
                 <TextView
@@ -196,10 +191,18 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:text="Bar menu"
+                    android:text="Snacks and light fare"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </LinearLayout>
         </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
+        android:background="#ffffff"
+        android:padding="@dimen/activity_vertical_margin" >
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -211,19 +214,83 @@
                 android:layout_height="60dp" >
 
                 <ImageView
-                    android:id="@+id/ImageView10"
+                    android:id="@+id/ImageView04"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:scaleType="fitCenter"
                     android:src="@drawable/happyhour" />
 
                 <ImageView
-                    android:id="@+id/ImageView08"
+                    android:id="@+id/ImageView01"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:scaleType="fitXY"
                     android:src="@drawable/frame" />
             </RelativeLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/activity_horizontal_margin" >
+
+            <TextView
+                android:id="@+id/TextView03"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Happy Hour specials"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="1dp" >
+
+                    <ImageView
+                        android:id="@+id/ImageView05"
+                        android:layout_width="17dp"
+                        android:layout_height="17dp"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/happyhour" />
+                </FrameLayout>
+
+                <TextView
+                    android:id="@+id/TextView02"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:text="5 PM - 7 PM only"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <FrameLayout
+                    android:layout_width="17dp"
+                    android:layout_height="17dp"
+                    android:padding="1dp" >
+
+                </FrameLayout>
+
+                <TextView
+                    android:id="@+id/TextView01"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:text="Discounted drinks and food"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
