--- a/res/layout/actionbar_indeterminate_progress.xml
+++ b/res/layout/actionbar_indeterminate_progress.xml
@@ -3,38 +3,13 @@
     android:layout_height="wrap_content"
     android:gravity="center" >
 
-    <RelativeLayout
-        android:layout_width="42dp"
-        android:layout_height="42dp"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:gravity="center" >
-
-        <ImageView
-            android:id="@+id/ImageView01"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_marginRight="5dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_launcher" />
-
-        <ProgressBar
-            style="?android:attr/indeterminateProgressStyle"
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="false"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="false" />
-
-    </RelativeLayout>
-
     <TextView
         android:id="@+id/actionBarConnectedText"
         android:layout_width="325dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_weight="2"
-        android:text="Searching for Bartsy points..."
+        android:text="Not checked in"
         android:textSize="18sp"
         android:textStyle="bold" />
 
