--- a/res/layout/drinks_main.xml
+++ b/res/layout/drinks_main.xml
@@ -24,7 +24,7 @@
 
     </SearchView>
 
-    <LinearLayout
+    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
@@ -293,7 +293,7 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
+ -->
     <LinearLayout
         android:id="@+id/view_drinks_for_me_list"
         android:layout_width="match_parent"
