--- a/res/layout/drinks_main.xml
+++ b/res/layout/drinks_main.xml
@@ -294,12 +294,13 @@
         </LinearLayout>
     </LinearLayout>
  -->
-    <LinearLayout
-        android:id="@+id/view_drinks_for_me_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
-    </LinearLayout>
+    <ExpandableListView
+            android:id="@+id/view_drinks_for_me_list"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+        </ExpandableListView>
 </LinearLayout>
 
 </ScrollView>
