Code now works when multiple phones are connected to a channel. Orders can be placed from any of the phones and the order status updates correctly. I also moved the people list to the application for robustness, but there is still no "checkout" code per se on the host side. So when a user leaves the channel they still stay in the people list... This needs to be fixed.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@26 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/layout-sw600dp/order_item.xml
+++ b/res/layout-sw600dp/order_item.xml
@@ -118,8 +118,8 @@
 
                                 <ImageView
                                     android:id="@+id/view_order_profile_picture"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="fill_parent"
+                                    android:layout_height="fill_parent"
                                     android:layout_marginRight="3dp"
                                     android:scaleType="fitXY"
                                     android:src="@drawable/peter" />
