--- a/res/layout/drinks_main.xml
+++ b/res/layout/drinks_main.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
-<LinearLayout
-    android:id="@+id/view_drinks_list"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="right"
-    android:layout_marginBottom="@dimen/activity_vertical_margin"
-    android:background="#dddddd"
-    android:gravity="center_horizontal"
-    android:orientation="vertical" >
-
-    <SearchView
-        android:id="@+id/searchView1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:id="@+id/view_drinks_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="right"
-        android:queryHint="Search the Bartsy drink database" >
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:background="#dddddd"
+        android:gravity="center_horizontal"
+        android:orientation="vertical" >
 
-    </SearchView>
+        <SearchView
+            android:id="@+id/searchView1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:queryHint="Search the Bartsy drink database" >
+        </SearchView>
 
-    <!-- <LinearLayout
+        <!--
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
@@ -292,15 +292,16 @@
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
- -->
-    <ExpandableListView
+    </LinearLayout>
+        -->
+
+        <ExpandableListView
             android:id="@+id/view_drinks_for_me_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="vertical" >
         </ExpandableListView>
-</LinearLayout>
+    </LinearLayout>
 
-</ScrollView>
+</LinearLayout>
