--- a/res/layout/drink_item.xml
+++ b/res/layout/drink_item.xml
@@ -19,9 +19,8 @@
                 android:id="@+id/view_drink_image"
                 android:layout_width="105dp"
                 android:layout_height="105dp"
-                android:padding="3dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/sambuca" />
+                android:src="@drawable/drinks" />
 
             <ImageView
                 android:id="@+id/ImageView02"
