--- a/res/layout/order_item.xml
+++ b/res/layout/order_item.xml
@@ -190,12 +190,11 @@
 
                                 <ImageView
                                     android:id="@+id/view_order_image_resource"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="fill_parent"
+                                    android:layout_height="fill_parent"
                                     android:layout_marginRight="3dp"
-                                    android:padding="5dp"
                                     android:scaleType="fitCenter"
-                                    android:src="@drawable/sambuca" />
+                                    android:src="@drawable/drinks" />
 
                                 <ImageView
                                     android:id="@+id/ImageView01"
