--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,9 +7,8 @@
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:layout_weight="2"
         android:gravity="center"
         android:shadowColor="#000000"
@@ -19,6 +18,150 @@
         android:text="Welcome to Bartsy"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="24sp" />
+
+    <LinearLayout
+		android:id="@+id/button_active_venue"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:background="@drawable/rounded_corner"
+        android:orientation="vertical"
+        android:padding="2dp" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_horizontal_margin" >
+
+            <FrameLayout
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center_vertical"
+                android:padding="1dp" >
+
+                <ImageView
+                    android:id="@+id/ImageView25"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="center_vertical"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_checked_in" />
+            </FrameLayout>
+
+            <TextView
+                android:id="@+id/TextView25"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:text="Checked in at:"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
+            android:background="#ffffff"
+            android:padding="@dimen/activity_vertical_margin" >
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+
+                <RelativeLayout
+                    android:layout_width="60dp"
+                    android:layout_height="60dp" >
+
+                    <ImageView
+                        android:id="@+id/ImageView21"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="2dp"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/finnmccools" />
+
+                    <ImageView
+                        android:id="@+id/ImageView23"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/frame" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/activity_horizontal_margin" >
+
+                <TextView
+                    android:id="@+id/TextView22"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Finn Mc&apos;Cool&apos;s"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:id="@+id/TextView26"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="2435 Main St, Santa Monica, CA 90405"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+
+                <RelativeLayout
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="#ddddee" >
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:orientation="vertical" >
+
+                        <TextView
+                            android:id="@+id/TextView21"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:gravity="center_horizontal"
+                            android:text="3 open orders"
+                            android:textAppearance="?android:attr/textAppearanceSmall" />
+                    </LinearLayout>
+
+                    <ImageView
+                        android:id="@+id/ImageView24"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/frame" />
+                </RelativeLayout>
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
 
     <GridLayout
         android:layout_width="fill_parent"
@@ -30,7 +173,7 @@
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_vertical_margin"
+            android:layout_gravity="fill_horizontal"
             android:background="@drawable/rounded_corner" >
 
             <Button
@@ -38,10 +181,10 @@
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="140dp"
                 android:layout_height="100dp"
-                android:drawableTop="@drawable/icon_bartender"
-                android:gravity="top|center_horizontal"
+                android:drawableTop="@drawable/icon_location"
+                android:gravity="center_vertical|center_horizontal"
                 android:padding="@dimen/activity_vertical_margin"
-                android:text="Browse and check in at venues"
+                android:text="Nearby venues"
                 android:textSize="14sp" />
 
         </FrameLayout>
@@ -49,8 +192,8 @@
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/activity_vertical_margin"
+            android:layout_gravity="right"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:background="@drawable/rounded_corner" >
 
             <Button
@@ -60,16 +203,15 @@
                 android:layout_height="100dp"
                 android:drawableTop="@drawable/icon_favorites"
                 android:padding="@dimen/activity_vertical_margin"
-                android:text="Look at past orders and rewards"
+                android:text="My venues"
                 android:textSize="14sp" />
-
         </FrameLayout>
 
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_horizontal"
-            android:layout_margin="@dimen/activity_vertical_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:background="@drawable/rounded_corner" >
 
             <Button
@@ -77,19 +219,18 @@
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="140dp"
                 android:layout_height="100dp"
-                android:drawableTop="@drawable/icon_drink"
-                android:gravity="top|center_horizontal"
+                android:drawableTop="@drawable/icon_bartender"
+                android:gravity="center_vertical|center_horizontal"
                 android:padding="@dimen/activity_vertical_margin"
-                android:text="See what cocktails you can mix"
+                android:text="My mixologist"
                 android:textSize="14sp" />
-
         </FrameLayout>
 
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/activity_vertical_margin"
+            android:layout_gravity="right"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:background="@drawable/rounded_corner" >
 
             <Button
@@ -98,13 +239,11 @@
                 android:layout_width="140dp"
                 android:layout_height="100dp"
                 android:drawableTop="@drawable/icon_settings"
-                android:gravity="top|center_horizontal"
+                android:gravity="center_vertical|center_horizontal"
                 android:padding="@dimen/activity_vertical_margin"
-                android:text="Set up your profile and other options"
+                android:text="My profile"
                 android:textSize="14sp" />
-
         </FrameLayout>
-
     </GridLayout>
 
     <TextView
