--- a/res/layout/dialog_drink_order.xml
+++ b/res/layout/dialog_drink_order.xml
@@ -103,27 +103,6 @@
                 android:background="@drawable/rounded_corner"
                 android:padding="@dimen/activity_vertical_margin" >
 
-                <RelativeLayout
-                    android:layout_width="80dp"
-                    android:layout_height="80dp" >
-
-                    <ImageView
-                        android:id="@+id/view_dialog_drink_image_resource"
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:layout_marginRight="3dp"
-                        android:padding="5dp"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/drinks" />
-
-                    <ImageView
-                        android:id="@+id/ImageView03"
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/frame" />
-                </RelativeLayout>
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -143,31 +122,32 @@
                         android:layout_width="fill_parent"
                         android:layout_height="32dp"
                         android:drawableLeft="@drawable/wrench"
-                        android:text="Customize"
+                        android:text="Customize drink"
                         android:textSize="12sp" />
 
                 </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="70dp"
+                android:layout_width="80dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:background="@drawable/rounded_corner"
                 android:gravity="center_vertical|center_horizontal"
                 android:orientation="vertical"
-                android:padding="@dimen/activity_horizontal_margin" >
+                android:padding="3dp" >
 
                 <TextView
-                android:id="@+id/view_dialog_drink_price"
+                    android:id="@+id/view_dialog_drink_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="$6"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="#995555"
-                    android:textSize="28sp"
+                    android:textSize="22sp"
                     android:textStyle="bold" />
+
             </LinearLayout>
         </LinearLayout>
 
