--- a/res/layout/order_item.xml
+++ b/res/layout/order_item.xml
@@ -68,33 +68,6 @@
                                 android:textAppearance="?android:attr/textAppearanceSmall" />
                         </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/activity_horizontal_margin" >
-
-                            <TextView
-                                android:id="@+id/textView4"
-                                android:layout_width="wrap_content"
-                                android:layout_height="fill_parent"
-                                android:layout_marginRight="@dimen/activity_horizontal_margin"
-                                android:gravity="center_vertical"
-                                android:text="Price: "
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textSize="16sp" />
-
-                            <TextView
-                                android:id="@+id/view_order_price"
-                                android:layout_width="wrap_content"
-                                android:layout_height="fill_parent"
-                                android:layout_marginRight="@dimen/activity_horizontal_margin"
-                                android:gravity="center_vertical"
-                                android:text="$12"
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textSize="21sp"
-                                android:textStyle="bold" />
-                        </LinearLayout>
-
                     </LinearLayout>
 
                     <LinearLayout
@@ -183,32 +156,11 @@
                             android:layout_weight="10"
                             android:background="@drawable/rounded_corner" >
 
-                            <RelativeLayout
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:layout_margin="@dimen/activity_vertical_margin" >
-
-                                <ImageView
-                                    android:id="@+id/view_order_image_resource"
-                                    android:layout_width="fill_parent"
-                                    android:layout_height="fill_parent"
-                                    android:layout_marginRight="3dp"
-                                    android:scaleType="fitCenter"
-                                    android:src="@drawable/drinks" />
-
-                                <ImageView
-                                    android:id="@+id/ImageView01"
-                                    android:layout_width="fill_parent"
-                                    android:layout_height="fill_parent"
-                                    android:scaleType="fitXY"
-                                    android:src="@drawable/frame" />
-                            </RelativeLayout>
-
                             <LinearLayout
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="@dimen/activity_horizontal_margin"
-                                android:layout_weight="60"
+                                android:layout_weight="2"
                                 android:orientation="vertical" >
 
                                 <TextView
@@ -217,14 +169,37 @@
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="top"
                                     android:text="Martini"
-                                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                                    android:textAppearance="?android:attr/textAppearanceLarge"
+                                    android:textSize="15sp" />
 
                                 <TextView
                                     android:id="@+id/view_order_description"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="1/3 oz Dry Vermouth"
-                                    android:textSize="12sp" />
+                                    android:textSize="10sp" />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                                android:gravity="center_vertical|center_horizontal"
+                                android:orientation="vertical" >
+
+                                <TextView
+                                	android:id="@+id/view_order_price"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="top|center_horizontal"
+                                    android:layout_margin="@dimen/activity_vertical_margin"
+                                    android:text="$0"
+                                    android:textAppearance="?android:attr/textAppearanceLarge"
+                                    android:textColor="#995555"
+                                    android:textSize="18sp"
+                                    android:textStyle="bold" />
+
                             </LinearLayout>
 
                         </LinearLayout>
