Several updates in UI and name changes to start removing unused code
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@43 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -15,6 +15,15 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        
     </style>
    
+ 	<style name="DrinkDialog" parent="@android:style/Theme.Holo.Light.Dialog">
+        <item name="android:windowAnimationStyle">@style/DrinkDialogAnimation</item>
+    </style>
+
+    <style name="DrinkDialogAnimation">
+        <item name="android:windowExitAnimation">@android:anim/slide_out_right</item>
+    </style>    
+    
 </resources>
