--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -19,147 +19,85 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="24sp" />
 
+    <FrameLayout
+		android:id="@+id/view_active_venue"
+        android:layout_width="fill_parent"
+        android:layout_height="42dp"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:background="@drawable/rounded_corner" >
+
+        <Button
+			android:id="@+id/button_active_venue"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:drawableLeft="@drawable/ic_checked_in"
+            android:gravity="left|center_vertical"
+            android:text="Checked in at Finn Mc&apos;Cools\n(3 open orders)"
+            android:textSize="14sp" />
+
+    </FrameLayout>
+
     <LinearLayout
-		android:id="@+id/button_active_venue"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="42dp"
         android:layout_margin="@dimen/activity_vertical_margin"
         android:background="@drawable/rounded_corner"
-        android:orientation="vertical"
-        android:padding="2dp" >
+        android:divider="@drawable/div_light_grey_vertical"
+        android:dividerPadding="1dp"
+        android:orientation="horizontal"
+        android:showDividers="middle" >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_horizontal_margin" >
+        <Button
+            android:id="@+id/button_payments"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="2"
+            android:drawableLeft="@drawable/alert"
+            android:gravity="left|center_vertical"
+            android:text="Set up your credit card to be able to order drinks..."
+            android:textSize="14sp" />
 
-            <FrameLayout
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_gravity="center_vertical"
-                android:padding="1dp" >
+        <Button
+            android:id="@+id/button_payments_dismiss"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="45dp"
+            android:layout_height="fill_parent"
+            android:drawableRight="@drawable/closewindow"
+            android:gravity="left|center_vertical"
+            android:textSize="14sp" />
+    </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/ImageView25"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center_vertical"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ic_checked_in" />
-            </FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="42dp"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:background="@drawable/rounded_corner"
+        android:divider="@drawable/div_light_grey_vertical"
+        android:dividerPadding="1dp"
+        android:orientation="horizontal"
+        android:showDividers="middle" >
 
-            <TextView
-                android:id="@+id/TextView25"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:text="Checked in at:"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-        </LinearLayout>
+        <Button
+            android:id="@+id/button_profile"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="2"
+            android:drawableLeft="@drawable/alert"
+            android:gravity="left|center_vertical"
+            android:text="Set up your profile to be able to see other profiles at bars"
+            android:textSize="14sp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
-            android:background="#ffffff"
-            android:padding="@dimen/activity_vertical_margin" >
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" >
-
-                <RelativeLayout
-                    android:layout_width="60dp"
-                    android:layout_height="60dp" >
-
-                    <ImageView
-                        android:id="@+id/ImageView21"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="2dp"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/finnmccools" />
-
-                    <ImageView
-                        android:id="@+id/ImageView23"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:clickable="true"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/frame" />
-                </RelativeLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:orientation="vertical"
-                android:paddingLeft="@dimen/activity_horizontal_margin" >
-
-                <TextView
-                    android:id="@+id/TextView22"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Finn Mc&apos;Cool&apos;s"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textStyle="bold" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/TextView26"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="2435 Main St, Santa Monica, CA 90405"
-                        android:textAppearance="?android:attr/textAppearanceSmall" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" >
-
-                <RelativeLayout
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:background="#ddddee" >
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:orientation="vertical" >
-
-                        <TextView
-                            android:id="@+id/TextView21"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:gravity="center_horizontal"
-                            android:text="3 open orders"
-                            android:textAppearance="?android:attr/textAppearanceSmall" />
-                    </LinearLayout>
-
-                    <ImageView
-                        android:id="@+id/ImageView24"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/frame" />
-                </RelativeLayout>
-            </LinearLayout>
-        </LinearLayout>
+        <Button
+            android:id="@+id/button_profile_dismiss"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="45dp"
+            android:layout_height="fill_parent"
+            android:drawableRight="@drawable/closewindow"
+            android:gravity="left|center_vertical"
+            android:textSize="14sp" />
 
     </LinearLayout>
 
@@ -180,13 +118,12 @@
                 android:id="@+id/button_checkin"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="140dp"
-                android:layout_height="100dp"
+                android:layout_height="84dp"
                 android:drawableTop="@drawable/icon_location"
                 android:gravity="center_vertical|center_horizontal"
                 android:padding="@dimen/activity_vertical_margin"
-                android:text="Nearby venues"
+                android:text="Nearby Venues"
                 android:textSize="14sp" />
-
         </FrameLayout>
 
         <FrameLayout
@@ -197,13 +134,13 @@
             android:background="@drawable/rounded_corner" >
 
             <Button
-                android:id="@+id/Button02"
+                android:id="@+id/button_my_venues"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="140dp"
-                android:layout_height="100dp"
+                android:layout_height="84dp"
                 android:drawableTop="@drawable/icon_favorites"
                 android:padding="@dimen/activity_vertical_margin"
-                android:text="My venues"
+                android:text="My Venues"
                 android:textSize="14sp" />
         </FrameLayout>
 
@@ -215,14 +152,14 @@
             android:background="@drawable/rounded_corner" >
 
             <Button
-                android:id="@+id/Button03"
+                android:id="@+id/button_notifications"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="140dp"
-                android:layout_height="100dp"
+                android:layout_height="84dp"
                 android:drawableTop="@drawable/icon_bartender"
                 android:gravity="center_vertical|center_horizontal"
                 android:padding="@dimen/activity_vertical_margin"
-                android:text="My mixologist"
+                android:text="My Notifications"
                 android:textSize="14sp" />
         </FrameLayout>
 
@@ -237,14 +174,31 @@
                 android:id="@+id/button_settings"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="140dp"
-                android:layout_height="100dp"
+                android:layout_height="84dp"
                 android:drawableTop="@drawable/icon_settings"
                 android:gravity="center_vertical|center_horizontal"
                 android:padding="@dimen/activity_vertical_margin"
-                android:text="My profile"
+                android:text="My Profile"
                 android:textSize="14sp" />
         </FrameLayout>
     </GridLayout>
+
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="40dp"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:background="@drawable/rounded_corner" >
+
+        <Button
+            android:id="@+id/button_feedback"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:drawableLeft="@drawable/smiley"
+            android:gravity="left|center_vertical"
+            android:text="Send us praise, comments or suggestions"
+            android:textSize="14sp" />
+    </FrameLayout>
 
     <TextView
         android:id="@+id/textView4"
