--- a/res/layout/maps_main.xml
+++ b/res/layout/maps_main.xml
@@ -167,7 +167,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:gravity="center_horizontal"
-                        android:text="Within check in distance"
+                        android:text="Within check-in distance"
                         android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 </LinearLayout>
