--- a/res/menu/menu_main.xml
+++ b/res/menu/menu_main.xml
@@ -1,24 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    
    	<item 
-        android:id="@+id/action_requests"
-        android:showAsAction="always"
-        android:title="Notifications"
-        android:icon="@drawable/requests" />
-    
-   	<item 
-        android:id="@+id/action_messages"
-        android:showAsAction="always"
-        android:title="Notifications"
-        android:icon="@drawable/messages" />
-   	
-	<item 
-        android:id="@+id/action_notifications"
-        android:showAsAction="always"
-        android:title="Notifications"
-        android:icon="@drawable/notifications" />
-    
+   	    android:id="@+id/action_tab"
+        android:showAsAction="always" />
 	
    	<item 
    	    android:id="@+id/action_profile"
