--- a/res/layout-sw600dp/bartender_main.xml
+++ b/res/layout-sw600dp/bartender_main.xml
@@ -138,7 +138,7 @@
                 android:gravity="center_vertical|center_horizontal"
                 android:paddingLeft="@dimen/activity_vertical_margin"
                 android:paddingRight="@dimen/activity_vertical_margin"
-                android:text="Ready for pickup"
+                android:text="Ready"
                 android:textAppearance="?android:attr/textAppearanceMediumInverse"
                 android:textSize="24sp"
                 android:textStyle="bold" />
