Removed unused code and reorganized project.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@100 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/layout/dialog_user_profile.xml
+++ b/res/layout/dialog_user_profile.xml
@@ -47,8 +47,7 @@
                         android:id="@+id/view_user_dialog_image_resource"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/emily" />
+                        android:scaleType="fitXY" />
 
                     <ImageView
                         android:id="@+id/ImageView03"
