--- a/res/layout/menu_section.xml
+++ b/res/layout/menu_section.xml
@@ -20,8 +20,7 @@
                 android:layout_width="105dp"
                 android:layout_height="105dp"
                 android:padding="3dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/sambuca" />
+                android:scaleType="fitCenter" />
 
             <ImageView
                 android:id="@+id/ImageView02"
